Se documenta el readme con los test de la aplciación y se optimiza el código